<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.eim.practicaltest02model.PracticalTest02ModelMainActivity" >

    
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SERVER" />
    
   
   
        
        <EditText
            android:id="@+id/port_server_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/port_server"
            android:layout_row="0"
            android:layout_column="1" />
    
    
    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/connect" />
    
    
     
    
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CLIENT" />
     
      <EditText
            android:id="@+id/port_client_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/port_client"
            android:layout_row="0"
            android:layout_column="1" />
      
      <EditText
            android:id="@+id/address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/address"
            android:layout_row="0"
            android:layout_column="1" />
      
      <EditText
            android:id="@+id/city_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/city"
            android:layout_row="0"
            android:layout_column="1" />
      
      <Spinner
            android:id="@+id/data_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/data"
            android:spinnerMode="dropdown"
            android:layout_row="3"
            android:layout_column="1" />     
    
    
    <Button
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/weather" />
    
     <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
	    <TextView
	        android:id="@+id/weather_forecast_text_view"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="false"
	        android:maxLines="10" />
    
    </ScrollView>
     

</LinearLayout>
